ie11 event detail spacing fix

--- a/components/eventDetail/eventDetail.css
+++ b/components/eventDetail/eventDetail.css
@@ -9,30 +9,38 @@
     z-index: 150;
 }
 
-.fade-in .event-detail-wrap {
+.has-detail .event-detail-wrap {
     transform: translate(0, 0);
 }
 
-.fade-in .event-detail-inner-wrap {
+.has-detail .event-detail-inner-wrap {
     transform: translate(-50%, 0);
 }
 
 .event-detail-inner-wrap {
-    background: white;
-    border: solid 1px #bcbcbc;
-    border-radius: 3px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     position: absolute;
-    top: 60px;
+    top: 0;
     z-index: 150;
-    margin: 0 auto 60px auto;
+    /* margin: 60px auto; */
     left: 50%;
     overflow-y: auto;
-    padding: 20px 0;
     transform: translate(-50%, -200%);
     transition: all 250ms ease;
     max-width: 600px;
     width: 90%;
+}
+
+.event-detail-content-container {
+    padding: 60px 0;
+}
+
+.event-detail-content-wrap {
+    background: white;
+    border: solid 1px #bcbcbc;
+    border-radius: 3px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    padding: 20px 0;
+
 }
 
 .event-detail-content {
@@ -67,7 +75,12 @@
     position: fixed;
     top: 0;
     left: 0;
+    display: none;
     width: 100%;
+}
+
+.has-detail .event-detail-background-wrap {
+    display: block;
 }
 
 .event-detail-close-button {
@@ -76,8 +89,8 @@
     cursor: pointer;
     display: inline-block;
     padding: 5px;
-    position: absolute;
-    right: 20px;
+    /* position: absolute; */
+    float: right;
     text-transform: uppercase;
     top: 20px;
 }
